--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": ">=5.6",
     "psr/log": "~1.0",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-iconv": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "8.4.*"
